--- a/_sass/_util.scss
+++ b/_sass/_util.scss
@@ -15,7 +15,7 @@ $site-font-bold-italic: "roboto_bolditalic";
 $bg-blue:  #233e81;
 $bg-grey:  #98afc7;
 $cta-blue: #1d7bd7;
-$code-grey: #999;
+$code-grey: #f6f8fa;
 
 $success: #369505;
 $warning: #892727;
